# arceos

./: .gitignore  .gitmodules  BOOT_ArceOS_from_Linux.md  Cargo.toml  Makefile  search-index.js
api/axfeat/: Cargo.toml
apps/hv/src/: linux.rs  main.rs  vm.rs
apps/task/yield/: Cargo.toml
apps/vmm/: Cargo.toml  README.md
apps/vmm/src/: gconfig.rs  gpm.rs  main.rs
axhal/mem/: index.html  struct.MemRegionFlags.html
axmm/: struct.AddrSpace.html
crates/allocator/: Cargo.toml
crates/allocator/benches/: collections.rs
crates/allocator/src/: lib.rs  talc.rs
crates/axerrno/src/: lib.rs
crates/axvm/: Cargo.toml
crates/axvm/src/: lib.rs
crates/axvm/src/arch/x86_64/: mod.rs
crates/axvm/src/arch/x86_64/vmx/: vcpu.rs
crates/axvm/src/mm/: mod.rs  npt.rs
crates/driver_pci/: Cargo.toml
crates/driver_virtio/: Cargo.toml
crates/pci/src/: bus.rs  config.rs  host.rs
crates/pci/src/util/: mod.rs  num_ops.rs
crates/virtio/src/queue/: split.rs
modules/axalloc/src/: lib.rs
modules/axdriver/src/: virtio.rs
modules/axdriver/src/bus/: pci.rs
modules/axhal/: Cargo.toml  build.rs  expand.rs  linker_hv.lds.S
modules/axhal/src/: cpu.rs  hv.rs  lib.rs  mem.rs  trap.rs
modules/axhal/src/platform/: mod.rs
modules/axprocess/src/scf/: syscall_forward.rs
modules/axruntime/: Cargo.toml
modules/axruntime/src/: lang_items.rs  lib.rs  mp.rs  vmm.rs
modules/axruntime/src/type1_5/: memory.rs
modules/axtask/: Cargo.toml
modules/axtask/src/: api.rs  lib.rs  run_queue.rs  task.rs  timers.rs  wait_queue.rs
modules/axvm/: Cargo.toml
modules/axvm/src/: handlers.rs  hvc.rs  lib.rs  linux.rs  nimbos.rs  vcpu.rs  vcpu_list.rs  vm.rs  vmexit.rs
modules/axvm/src/config/: args.rs  entry.rs  gpm_def.rs  mod.rs
modules/axvm/src/device/: dummy_pci.rs
modules/axvm/src/mm/: address_space.rs  iovec.rs  memory_set.rs  mod.rs
scripts/guest/: boot_arceos.sh
scripts/host/: Makefile
scripts/make/: build.mk  qemu.mk
scripts/vmm/: scp.mk
scripts/vmm/guest/: enable-arceos-vmm.sh  setup.sh  update-cmdline.sh
scripts/vmm/host/: Makefile  user-data
search.desc/axstd/: axstd-desc-0-.js
src/axhal/: mem.rs.html
src/axhal/arch/x86_64/: context.rs.html  mod.rs.html
src/axmm/: aspace.rs.html
src/axruntime/: mp.rs.html
src/axtask/: task.rs.html
(+32 files in other folders)
