[package]
name = "arceos-vmm"
version = "0.1.0"
edition = "2021"
authors = ["hky1999 <976929993@qq.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axstd = { path = "../../ulib/axstd", features = ["multitask", "irq"], optional = true }
axstd = { path = "../../ulib/axstd", features = ["multitask", "irq", "paging"], optional = true }
