[package]
name = "vmm"
version = "0.1.0"
edition = "2021"
authors = ["Keyang Hu <976929993@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bitflags = "2.2"
spin = "0.9"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
axstd = { path = "../../ulib/axstd", features = [
    "alloc",
    "paging",
    "fs",
], optional = true }
axvm = { path = "../../crates/axvm" }
axerrno = { path = "../../crates/axerrno" }
axalloc = { path = "../../modules/axalloc" }
axhal = { path = "../../modules/axhal" }
page_table_entry = { path = "../../crates/page_table_entry" }
memory_addr = { path = "../../crates/memory_addr" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
raw-cpuid = "11.0"
